- Added item "fromcli" to struct Preferences
- added function for freeing an array of strings
- added GUI for Main Window (Welcome and UserLevel select)

0043
- added function setgadgetdisable() to enable/disable stdglist gadgets
- more GUI enhancements
- rewrite of misc/strtostrs(), needs less realloc()
- moved traperr() to execute.c
- added display_text() in gui.c to show up some text in a requester with
  "Okay" only button.

0044
- added pretend-to-install request gui
- added gui for request_confirm(), lacks gui for help text
- implemented (database "grapics-mem") and (database "total-mem")
- added variable doing_abort to work around the "abort in abort" BUG00003

0045
- changed PrintIText() to Move(),Text()
- activated global gadgets for show_message()
- imported code from AROS/workbench/utilities/More/more.c to display
  scrollable texts in a new window (used for help windows).

0046
- added misc.h with function prototypes of misc.c
- added function collatestrings() to misc.c which collates lines of strings
- added gui.h as API description for future GUIs
- scaled size of mxgadgets

0047
- added gui for request_string(), lacks gui for help text
- moved help texts to texts.h
- added gui for request_number() (clone from request_string())
- added macros ExecuteCommand() and ExecuteNextCommand() in execute.c
- new mmakefile.src by Iain Templeton (iaint@aros.org) for the
  New Build Process

0048
- execute destructors of some gui-functions and call abort_install()
  with pointer to this destructor (or NULL if not needed)
- small changes to request_number (integer gadget)
- implemented "rename"
- added a GUI function user_confirm(char *) to ask user to proceed or skip
- added some more preset variables/help texts

0049
- use (preset) @askstring variable instead of fixed ASKSTRING_HELP,
  same for asknumber and askchoice
- partially implemented (delete). Need to implement (optional) and (delopts)
- gui for (askchoice)

0050
- fixed crash of askchoice gui
